[package]
name = "ethers-octopus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
ethers-middleware = "1.0.2"
ethers-providers = "1.0.2"
ethers-signers = "1.0.2"
thiserror = "1.0.38"
